fix bulk actions alignment in firefox

--- a/src/applications/content-playlists-app/playlist/playlist-content/rule-based/bulk-operations/bulk-operations.component.scss
+++ b/src/applications/content-playlists-app/playlist/playlist-content/rule-based/bulk-operations/bulk-operations.component.scss
@@ -26,6 +26,8 @@
 
   .kBulkActions {
     margin-left: 14px;
+    display: flex;
+    align-items: center;
 
     .kBulkDeleteBtn {
       padding: 0 8px;
