--- a/src/applications/content-playlists-app/playlists/playlists-list/playlists-list.component.scss
+++ b/src/applications/content-playlists-app/playlists/playlists-list/playlists-list.component.scss
@@ -83,6 +83,8 @@
 	}
 	.kBulkOperations {
 		width: 400px;
+    display: flex;
+    align-items: center;
 	}
 	.kSelectedPlaylistsLabel {
 		font-weight: bold;
