--- a/src/applications/settings-custom-data-app/schemas/schemas-list/schemas-list.component.scss
+++ b/src/applications/settings-custom-data-app/schemas/schemas-list/schemas-list.component.scss
@@ -84,8 +84,9 @@
     }
   }
   .kBulkOperations {
-    margin-left: 15px;
     width: 400px;
+    display: flex;
+    align-items: center;
   }
   .kSelectedSchemasLabel {
     font-weight: bold;
