--- a/src/applications/settings-transcoding-settings-app/transcoding-profiles/transcoding-profiles-list/transcoding-profiles-list.component.scss
+++ b/src/applications/settings-transcoding-settings-app/transcoding-profiles/transcoding-profiles-list/transcoding-profiles-list.component.scss
@@ -27,6 +27,8 @@
 
     .kBulkOperations {
       width: 400px;
+      display: flex;
+      align-items: center;
     }
 
     .kSelectedProfilesLabel {
